--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "description": "Test. Backend för lundakarnevalen 2018",
   "main": "index.js",
-  "scripts": {
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Lundakarnevalen/imaginal-backend.git"
@@ -15,5 +14,13 @@
   "bugs": {
     "url": "https://github.com/Lundakarnevalen/imaginal-backend/issues"
   },
-  "homepage": "https://github.com/Lundakarnevalen/imaginal-backend#readme"
+  "homepage": "https://github.com/Lundakarnevalen/imaginal-backend#readme",
+  "dependencies": {
+    "express": "^4.16.1",
+    "passport": "^0.4.0",
+    "sequelize": "^4.13.6"
+  },
+  "devDependencies": {
+    "standard": "^10.0.3"
+  }
 }
