Added mock route for login email
Started to implement register and auth

--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
   },
   "homepage": "https://github.com/Lundakarnevalen/imaginal-backend#readme",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.1",
+    "mysql2": "^1.4.2",
     "passport": "^0.4.0",
-    "sequelize": "^4.13.6"
+    "passport-local": "^1.0.0",
+    "sequelize": "^4.15.0"
   },
   "devDependencies": {
+    "sequelize-cli": "^3.0.0",
     "standard": "^10.0.3"
   }
 }
