--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "standard": "^10.0.3"
   },
   "standard": {
-    "globals": ["describe", "it"]
+    "globals": [
+      "describe",
+      "it"
+    ]
   }
 }
