--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Test. Backend för lundakarnevalen 2018",
   "main": "index.js",
   "scripts": {
-    "test": "standard --fix && nyc mocha"
+    "test": "standard --fix && nyc mocha",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
     "jsonwebtoken": "^8.1.0",
     "mysql2": "^1.4.2",
     "passport": "^0.4.0",
+    "passport-http-bearer": "^1.0.1",
     "passport-jwt": "^3.0.0",
     "passport-local": "^1.0.0",
     "sequelize": "^4.15.0",
