Add swagger documentation for routes
Login
Register
Hello-world

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Test. Backend för lundakarnevalen 2018",
   "main": "index.js",
   "scripts": {
+    "apidoc": "pretty-swag -i swagger.yaml",
     "test": "standard --fix && nyc mocha",
     "postman": "newman run ./test/Karneval.postman_collection.json",
     "start": "node app.js"
@@ -36,6 +37,7 @@
     "mocha": "^4.0.1",
     "newman": "^3.8.3",
     "nyc": "^11.3.0",
+    "pretty-swag": "^0.1.134",
     "standard": "^10.0.3"
   },
   "standard": {
