--- a/config/config.json
+++ b/config/config.json
@@ -1,22 +1,22 @@
 {
   "development": {
     "username": "root",
-    "password": "websec",
+    "password": null,
     "database": "karneval",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
-    "password": "websec",
-    "database": "karneval",
+    "password": null,
+    "database": "database_test",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
     "username": "root",
-    "password": "websec",
-    "database": "karneval",
+    "password": null,
+    "database": "database_production",
     "host": "127.0.0.1",
     "dialect": "mysql"
   }
