foreign key work

--- a/config/config.json
+++ b/config/config.json
@@ -4,7 +4,8 @@
     "password": null,
     "database": "karneval",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "logging": "console.log"
   },
   "test": {
     "username": "root",
