--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "apidoc": "pretty-swag -i swagger.yaml",
-    "test": "standard --fix && nyc mocha",
     "postman": "newman run ./test/Karneval.postman_collection.json",
+    "test": "standard --fix && nyc mocha && node setupadmintest.js && npm run postman",
     "start": "node app.js"
   },
   "repository": {
