--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,7 @@ typings/
 
 # macOS
 .DS_Store
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
