--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
     "jsonwebtoken": "^8.1.0",
     "mustache": "^2.3.0",
     "mysql2": "^1.4.2",
+    "node-schedule": "^1.3.0",
     "nvm": "0.0.4",
     "passport": "^0.4.0",
     "passport-http-bearer": "^1.0.1",
     "passport-jwt": "^3.0.0",
     "passport-local": "^1.0.0",
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2",
     "sequelize": "^4.31.2",
     "sequelize-cli": "^3.2.0"
   },
