--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "aws-sdk": "^2.188.0",
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
     "express": "^4.16.1",
+    "helmet": "^3.10.0",
     "jsonwebtoken": "^8.1.0",
     "mustache": "^2.3.0",
     "mysql2": "^1.4.2",
