--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
     "sequelize-cli": "^3.2.0"
   },
   "devDependencies": {
+    "chai": "^4.1.2",
     "mocha": "^4.1.0",
     "newman": "^3.9.3",
     "nyc": "^11.4.1",
     "pretty-swag": "^0.1.144",
-    "standard": "^10.0.3"
+    "standard": "^10.0.3",
+    "supertest": "^3.0.0"
   },
   "standard": {
     "globals": [
