--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "homepage": "https://github.com/Lundakarnevalen/imaginal-backend#readme",
   "dependencies": {
     "aws-sdk": "^2.188.0",
-    "bcrypt": "^1.0.3",
+    "bcrypt": "1.0.3",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.1",
