--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "cors": "^2.8.4",
     "express": "^4.16.1",
     "helmet": "^3.10.0",
+    "jimp": "^0.2.28",
     "jsonwebtoken": "^8.1.0",
     "multer": "^1.3.0",
     "multer-s3": "^2.7.0",
+    "multer-sharp": "^0.4.1",
     "mustache": "^2.3.0",
     "mysql2": "^1.4.2",
     "nvm": "0.0.4",
