--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.1",
     "helmet": "^3.10.0",
+    "html-pdf": "^2.2.0",
     "jimp": "^0.2.28",
     "jsonwebtoken": "^8.1.0",
     "multer": "^1.3.0",
