--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jsonwebtoken": "^8.1.0",
     "mustache": "^2.3.0",
     "mysql2": "^1.4.2",
+    "npm": "^6.0.0",
     "nvm": "0.0.4",
     "passport": "^0.4.0",
     "passport-http-bearer": "^1.0.1",
