--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "html-pdf": "^2.2.0",
     "jimp": "^0.2.28",
     "jsonwebtoken": "^8.1.0",
+    "moment": "^2.22.1",
     "multer": "^1.3.0",
     "multer-s3": "^2.7.0",
     "multer-sharp": "^0.4.1",
