--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "passport-jwt": "^3.0.0",
     "passport-local": "^1.0.0",
     "postman": "^0.2.0",
+    "regex": "^0.1.1",
     "sequelize": "^4.37.5",
     "sequelize-auto-migrations": "^1.0.2",
     "sequelize-cli": "^3.2.0",
