--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "sequelize": "^4.37.5",
     "sequelize-auto-migrations": "^1.0.2",
     "sequelize-cli": "^3.2.0",
-    "sequelizer": "^1.1.3"
+    "sequelizer": "^1.1.3",
+    "uuid": "^3.2.1"
   },
   "devDependencies": {
     "chai": "^4.1.2",
