--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "sequelize-auto-migrations": "^1.0.2",
     "sequelize-cli": "^3.2.0",
     "sequelizer": "^1.1.3",
+    "sleep": "^5.1.1",
     "swagger-jsdoc": "^1.9.7",
     "swagger-ui-express": "^3.0.8"
   },
